# ImageClassifyAPI

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/: main.py
api/core/cnn/: cnn_model.py  labels.py
