[tool.poetry]
name = "cnn-api"
version = "0.1.0"
description = "Serviço cnn"
authors = ["Eduardo Ferrari"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
